--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "description": "An application to practice what I've learned about React + Node.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "build": "cd frontend && npm run build",
     "client": "cd frontend && npm start",
-    "server": "nodemon index.js",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
+    "server": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
