--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "server": "nodemon index.js",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./backend/**/*.test.js && cd frontend && npm test"
   },
   "dependencies": {
     "dotenv": "^16.0.1",
@@ -23,7 +23,9 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-mocha": "^10.0.5",
     "eslint-plugin-prettier": "^4.0.0",
+    "mocha": "^10.0.0",
     "nodemon": "^2.0.16",
     "prettier": "^2.7.1"
   }
