--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-  "name": "super-list",
-  "author": "Skyler Goodell",
-  "version": "0.0.1",
-  "description": "An application to practice what I've learned about React + Node.",
-  "main": "index.js",
-  "scripts": {
-    "build": "cd frontend && npm install && npm run build",
-    "client": "cd frontend && npm start",
-    "dev": "concurrently \"npm run client\" \"npm run server\"",
-    "server": "nodemon index.js",
-    "start": "node index.js",
-    "test": "mocha ./backend/**/*.test.js && cd frontend && npm test"
-  },
-  "dependencies": {
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "pg": "^8.7.3"
-  },
-  "devDependencies": {
-    "concurrently": "^7.2.2",
-    "eslint": "^8.18.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-mocha": "^10.0.5",
-    "eslint-plugin-prettier": "^4.0.0",
-    "mocha": "^10.0.0",
-    "nodemon": "^2.0.16",
-    "prettier": "^2.7.1"
-  }
+    "name": "super-list",
+    "author": "Skyler Goodell",
+    "version": "0.0.1",
+    "description": "An application to practice what I've learned about React + Node.",
+    "main": "index.js",
+    "scripts": {
+        "build": "cd frontend && npm install && npm run build",
+        "client": "cd frontend && npm start",
+        "dev": "concurrently \"npm run client\" \"npm run server\"",
+        "server": "nodemon index.js",
+        "start": "node index.js",
+        "test": "npm run test:backend && npm run test:frontend",
+        "test:backend": "cross-env NODE_ENV=test mocha ./backend/**/*.test.js --exit",
+        "test:frontend": "cd frontend && npm test"
+    },
+    "dependencies": {
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "pg": "^8.7.3"
+    },
+    "devDependencies": {
+        "concurrently": "^7.2.2",
+        "cross-env": "^7.0.3",
+        "eslint": "^8.18.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-mocha": "^10.0.5",
+        "eslint-plugin-prettier": "^4.0.0",
+        "mocha": "^10.0.0",
+        "nodemon": "^2.0.16",
+        "prettier": "^2.7.1",
+        "sinon": "^14.0.0",
+        "supertest": "^6.2.4"
+    }
 }
