--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
         "test:frontend": "cd frontend && npm test"
     },
     "dependencies": {
+        "bcrypt": "^5.0.1",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
+        "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^8.5.1",
         "pg": "^8.7.3"
     },
     "devDependencies": {
