Add dokku environment into REST client environments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,11 @@
         "localhost": {
             "host": "http://localhost:8080"
         },
-        "service": {
+        "heroku": {
             "host": "https://groceries.skylers.app"
+        },
+        "dokku": {
+            "host": "http://grocery-list.dokku-dev.skylers.app"
         }
     }
 }
