Reboot work on grocery-list project. Refactor frontend components.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "super-list",
+    "name": "grocery-list",
     "author": "Skyler Goodell",
     "version": "0.0.1",
     "description": "An application to practice what I've learned about React + Node.",
